Updating index.html file

--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Learning Git</title>
+		<title>Learning Git & doing some chamges</title>
 	</head>
 	<body>
 		<h1>hi</h1>
